addet creators redirection

--- a/bizopt/BO/templates/baseResumeCard.html
+++ b/bizopt/BO/templates/baseResumeCard.html
@@ -16,7 +16,7 @@
           <a href="#" class="yt"><i class="fab fa-youtube"></i></a>
         </div>
         <div class="buttons">
-          <button>Написать</button>
+          <a type="button" href="cardResume">Написать</a>
           <button>Запомнить</button>
         </div>
         <div class="social-share">
