--- a/bizopt/BO/templates/editProfile.html
+++ b/bizopt/BO/templates/editProfile.html
@@ -1,6 +1,4 @@
-{% extends "base.html" %}
-
-{% block content %}
+{% extends "base.html" %} {% block content %}
 
 <!doctype html>
 <html>
@@ -16,41 +14,41 @@
         body {
             background: rgb(99, 39, 120)
         }
-
+        
         .form-control:focus {
             box-shadow: none;
             border-color: #BA68C8
         }
-
+        
         .profile-button {
             background: rgb(99, 39, 120);
             box-shadow: none;
             border: none
         }
-
+        
         .profile-button:hover {
             background: #682773
         }
-
+        
         .profile-button:focus {
             background: #682773;
             box-shadow: none
         }
-
+        
         .profile-button:active {
             background: #682773;
             box-shadow: none
         }
-
+        
         .back:hover {
             color: #682773;
             cursor: pointer
         }
-
+        
         .labels {
             font-size: 11px
         }
-
+        
         .add-experience:hover {
             background: #BA68C8;
             color: #fff;
@@ -65,9 +63,8 @@
         <div class="row">
             <div class="col-md-3 border-right">
                 <div class="d-flex flex-column align-items-center text-center p-3 py-5">
-                    <img class="rounded-circle mt-5" width="150px"
-                        src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
-                    {#                    <img class="rounded-circle mt-5" width="150px" src="{ imgPath }">#}
+                    <img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"> {# <img class="rounded-circle mt-5" width="150px"
+                        src="{ imgPath }">#}
                     <span class="font-weight-bold">тут будет имя
                     </span>
                     <span class="text-black-50">тут будет почта</span>
@@ -101,15 +98,15 @@
                                 <input type="text" class="form-control" id="email" placeholder="Почта" value="{{user.email}}"></div>
                         </div>
 
-                            <div class="row mt-3">
-                                <div class="coll-md-3">
-                                    <label class="labels">Загрузить фото</label>
-                                    <input id="fileupload" class="form-control" name="myfile" type="file"/>
-                                    <div class="mt-5 text-center">
-                                        <button class="btn btn-primary profile-button" type="submit">Сохранить</button>
-                                    </div>
+                        <div class="row mt-3">
+                            <div class="coll-md-3">
+                                <label class="labels">Загрузить фото</label>
+                                <input id="fileupload" class="form-control" name="myfile" type="file" />
+                                <div class="mt-5 text-center">
+                                    <button class="btn btn-primary profile-button" type="submit">Сохранить</button>
                                 </div>
                             </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4" style="display: none;" id="creator">
@@ -132,8 +129,7 @@
     </div>
     </div>
     </div>
-    <script type='text/javascript'
-        src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js'></script>
+    <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js'></script>
     <script type='text/javascript' src=''></script>
     <script type='text/javascript' src=''></script>
     <script type='text/Javascript'></script>
