--- a/bizopt/BO/templates/tasks.html
+++ b/bizopt/BO/templates/tasks.html
@@ -14,11 +14,11 @@
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <style>
         body {
-            background: #343a40
+            background: #343a40bf;
         }
         
         .labels {
-            font-size: 11px
+            font-size: 11px;
         }
     </style>
 </head>
