--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -11,7 +11,7 @@
       </div>
 
       <div class="row mt-2">
-        <div class="col-md-6">
+        <div class="col-md-12 justify-content-center">
           <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="col-md-6">
@@ -28,10 +28,10 @@
                 </div>
             </div>
             <br>
-            <div class="row mt-3">
-                <div class="col-md-2">
+            <div class="row mt-4">
+                <div class="col-md-4">
                     <label class="labels">Цена</label>
-                    <div class="input-group mb-3">
+                    <div class="input-group mb-4">
                         <input type="number" name="product_cost" class="form-control" style="text-align: right;" multiple>
                         <span class="input-group-text">.00 ₽</span>
                     </div>
