--- a/bizopt/BO/templates/tasks.html
+++ b/bizopt/BO/templates/tasks.html
@@ -50,7 +50,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">{{ card.name }}</h5>
                                     <p class="card-text cuttedText " max-width="100">{{ card.description }}</p>
-                                    <a href="#" class="btn btn-primary">перейти</a>
+                                    <a href="cardTask" class="btn btn-primary">перейти</a>
                                     <div class="d-inline-block ml-5">
                                         <a href="#" class="btn btn-secondary">
                                             <i class="fa-solid fa-share"></i>
