--- a/bizopt/BO/templates/cardResume.html
+++ b/bizopt/BO/templates/cardResume.html
@@ -9,10 +9,10 @@
   </div>
   <div class="info-container">
    <h1>О себе</h1>
-    <h2>{{profile.name}}</h2>
-    <p><b>Компания</b> {{profile.company}}</p>
-    <p><b>Вид(ы) деятельности</b> {{profile.doing}}</p>
-    <h3>{{profile.about}}</h3>
+    <h2>{{profile.first_name}}</h2>
+    <p><b>Компания</b> {{profile.company_name}}</p>
+    <p><b>Вид(ы) деятельности</b> {{profile.activity_type}}</p>
+    <h3>{{profile.description}}</h3>
   </div>
 </header>
 <div class="grid">
