--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -36,7 +36,7 @@
                     
                   <li class="list-group-item">
                    
-                    <h6>Есть в налаличии:
+                    <h6>Есть в наличии:
                     {% if product.availability == true%}
                      <span class="badge bg-red"></span>
                      {%else%}
