--- a/bizopt/BO/templates/editProfile.html
+++ b/bizopt/BO/templates/editProfile.html
@@ -65,9 +65,9 @@
                 <div class="d-flex flex-column align-items-center text-center p-3 py-5">
                     <img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"> {# <img class="rounded-circle mt-5" width="150px"
                         src="{ imgPath }">#}
-                    <span class="font-weight-bold">тут будет имя
+                    <span class="font-weight-bold"><!--{{user.first_name}} {{user.last_name}}--> {{user.username}}
                     </span>
-                    <span class="text-black-50">тут будет почта</span>
+                    <span class="text-black-50">{{user.email}}</span>
                     <span> </span>
                 </div>
             </div>
