--- a/bizopt/BO/templates/becomeCreatorTemplates/template1.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template1.html
@@ -5,7 +5,8 @@
   <div class="col-md-3 border-right">
     <div class="d-flex flex-column align-items-center text-center py-5">
       <img class="rounded-circle mt-5" width="150px"
-        src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+{#        src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"#}
+        src="{{ creator_avatar.url }}">
       <span class="font-weight-bold">{{ first_name }}
       </span>
       <span class="text-black-50">{{ email }}</span>
