--- a/bizopt/BO/templates/editProfile.html
+++ b/bizopt/BO/templates/editProfile.html
@@ -63,14 +63,14 @@
             <div class="col-md-3 border-right">
                 <div class="d-flex flex-column align-items-center text-center p-3 py-5">
                     <!-- <img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">-->
-                    <img class="rounded-circle mt-5" width="150px" src="../../media/images/profile/userImg.jpg">
+                    <img class="rounded-circle mt-5" width="150px" src="{{user.userImage.url}}" alt="Error">
                     <span class="font-weight-bold ">{{user.first_name}} {{user.last_name}}</span>
                     <span>{{user.email}}</span>
                     <span class="text-black-50 "> {{user.username}}</span>
                 </div>
             </div>
             <div id="main_change " class="col-md-8 ">
-                <form method="post " enctype="multipart/form-data ">
+                <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="p-3 py-5 ">
                         <div class="d-flex justify-content-between align-items-center mb-3 ">
@@ -78,31 +78,31 @@
                         </div>
                         <div class="row mt-2 ">
                             <div class="col-md-6 ">
-                                <label class="labels ">Имя</label>
-                                <input type="text " name="first_name " class="form-control " id="first_name " placeholder="{{user.first_name}} "></div>
+                                <label class="labels">Имя</label>
+                                <input type="text" name="first_name" class="form-control " id="first_name" placeholder="{{user.first_name}}"></div>
                             <div class="col-md-6 ">
-                                <label class="labels ">Фамилия</label>
-                                <input type="text " name="last_name " class="form-control " id="last_name " placeholder="{{user.last_name}} "></div>
+                                <label class="labels">Фамилия</label>
+                                <input type="text" name="last_name" class="form-control " id="last_name" placeholder="{{user.last_name}}"></div>
                         </div>
                         <div class="row mt-3 ">
                             <div class="col-md-12 ">
-                                <label class="labels ">Номер телефона</label>
-                                <input type="text " name="phone " class="form-control " id="phone " placeholder="{{user.phone}} "></div>
+                                <label class="labels">Номер телефона</label>
+                                <input type="text" name="phone" class="form-control" id="phone" placeholder="{{user.phone}}"></div>
                             <div class="col-md-12 ">
-                                <label class="labels ">Город</label>
-                                <input type="text " name="city " class="form-control " id="city " placeholder="{{user.city}} "></div>
+                                <label class="labels">Город</label>
+                                <input type="text" name="city" class="form-control" id="city" placeholder="{{user.city}}"></div>
                             <div class="col-md-12 ">
-                                <label class="labels ">Почта</label>
-                                <input type="text " class="form-control " id="email " placeholder="{{user.email}} "></div>
+                                <label class="labels">Почта</label>
+                                <input type="text" class="form-control" id="email" placeholder="{{user.email}}" ></div>
                         </div>
 
-                        <div class="row mt-3 ">
-                            <div class="coll-md-3 ">
+                        <div class="row mt-3">
+                            <div class="coll-md-3">
                                 <div class="input-group">
-                                    <input type="file" class="form-control" id="" aria-describedby="" aria-label="">
+                                    <input type="file" name="profile_photo" class="form-control" id="profile_photo" aria-describedby="" aria-label="">
                                 </div>
                                 <div class="mt-5 text-center ">
-                                    <button class="btn btn-primary profile-button " type="submit ">Сохранить</button>
+                                    <button class="btn btn-primary profile-button " type="submit">Сохранить</button>
                                 </div>
                             </div>
                         </div>
@@ -110,8 +110,6 @@
                 </form>
             </div>
         </div>
-    </div>
-    </div>
     </div>
     <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js'></script>
     <script type='text/javascript' src=''></script>
