--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -7,6 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>BizOpt</title>
     <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css' rel='stylesheet'>
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'>
     <link href='' rel='stylesheet'>
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -87,33 +88,28 @@
                             </span>
                         </a>
                         <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start hover-text-light sticky-top" id="menu">
-                           <li class="mb-2 mt-3 border-bottom">
-                                <a href="#" id="addBtn_5" onclick="Function()" class="nav-link px-0 align-middle">
-                                    <!-- <i class="fs-4 bi-people"></i>  -->
+                           <li class="mb-2 mt-3 border-bottom Btn">
+                                <a href="#" class="nav-link px-0 align-middle">
                                     <span class="ms-1 d-none d-sm-inline text-white" style="font-size: large;">Дашборд</span>
                                 </a>
                             </li>
-                            <li class="mb-2 mt-3 border-bottom">
-                                <a href="#" id="addBtn_1" onclick="Function()" class="nav-link px-0 align-middle">
-                                    <!-- <i class="fs-4 bi-people"></i>  -->
+                            <li class="mb-2 mt-3 border-bottom Btn">
+                                <a href="#" class="nav-link px-0 align-middle">
                                     <span class="ms-1 d-none d-sm-inline text-white" style="font-size: large;">Мой профиль</span>
                                 </a>
                             </li>
-                            <li class="mb-2 mt-3 border-bottom">
-                                <a href="#" id="addBtn_2" class="nav-link px-0 align-middle">
-                                    <!-- <i class="fs-4 bi-people"></i>  -->
+                            <li class="mb-2 mt-3 border-bottom Btn">
+                                <a href="#" class="nav-link px-0 align-middle">
                                     <span class="ms-1 d-none d-sm-inline text-white" style="font-size: large;">Мои товары</span>
                                 </a>
                             </li>
-                            <li class="mb-2 mt-3 border-bottom">
-                                <a href="#" id="addBtn_3" class="nav-link px-0 align-middle">
-                                    <!-- <i class="fs-4 bi-people"></i>  -->
+                            <li class="mb-2 mt-3 border-bottom Btn">
+                                <a href="#" class="nav-link px-0 align-middle">
                                     <span class="ms-1 d-none d-sm-inline text-white" style="font-size: large;">Создать товар</span>
                                 </a>
                             </li>
-                            <li class="mb-2 mt-3 border-bottom">
-                                <a href="#" id="addBtn_4" class="nav-link px-0 align-middle">
-                                    <!-- <i class="fs-4 bi-people"></i>  -->
+                            <li class="mb-2 mt-3 border-bottom Btn">
+                                <a href="#" class="nav-link px-0 align-middle">
                                     <span class="ms-1 d-none d-sm-inline text-white" style="font-size: large;">Регламент</span>
                                 </a>
                             </li>
@@ -130,75 +126,6 @@
     <script>
         $(function() {
             var xhr = new XMLHttpRequest()
-            xhr.open('GET', 'becomeCreatorTemplates/5/')
-            xhr.onload = function() {
-
-                $('#MainWindowContainer').html(xhr.response)
-            }
-            xhr.send()
-        });
-        $('#addBtn_5').on('click', {
-            title: 'Заголовок 1',
-            content: 'Содержимое 1...'
-        }, function(inBody) {
-
-            var xhr = new XMLHttpRequest()
-            xhr.open('GET', 'becomeCreatorTemplates/5/')
-            xhr.onload = function() {
-
-                $('#MainWindowContainer').html(xhr.response)
-            }
-            xhr.send()
-        });
-
-        $('#addBtn_1').on('click', {
-            title: 'Заголовок 1',
-            content: 'Содержимое 1...'
-        }, function(inBody) {
-
-            var xhr = new XMLHttpRequest()
-            xhr.open('GET', 'becomeCreatorTemplates/1/')
-            xhr.onload = function() {
-
-                $('#MainWindowContainer').html(xhr.response)
-            }
-            xhr.send()
-        });
-
-        $('#addBtn_2').on('click', {
-            title: 'Заголовок 1',
-            content: 'Содержимое 1...'
-        }, function(inBody) {
-
-            var xhr = new XMLHttpRequest()
-            xhr.open('GET', 'becomeCreatorTemplates/2/')
-            xhr.onload = function() {
-
-                $('#MainWindowContainer').html(xhr.response)
-            }
-            xhr.send()
-        });
-
-        $('#addBtn_3').on('click', {
-            title: 'Заголовок 1',
-            content: 'Содержимое 1...'
-        }, function(inBody) {
-
-            var xhr = new XMLHttpRequest()
-            xhr.open('GET', 'becomeCreatorTemplates/3/')
-            xhr.onload = function() {
-
-                $('#MainWindowContainer').html(xhr.response)
-            }
-            xhr.send()
-        });
-
-        $('#addBtn_4').on('click', {
-            title: 'Заголовок 1',
-            content: 'Содержимое 1...'
-        }, function(inBody) {
-
-            var xhr = new XMLHttpRequest()
             xhr.open('GET', 'becomeCreatorTemplates/4/')
             xhr.onload = function() {
 
@@ -206,6 +133,17 @@
             }
             xhr.send()
         });
+        $('.Btn').on('click', {}, function(inBody) {
+            var xhr = new XMLHttpRequest()
+            var index = $(this).index() + 1
+            xhr.open('GET', `becomeCreatorTemplates/${index}/`)
+            xhr.onload = function() {
+                $('#MainWindowContainer').html(xhr.response)
+            }
+            xhr.send()
+        });
+        
+
     </script>
 </body>
 {% endblock %}
