--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -1,53 +1,29 @@
-{#<form method="POST">#}
 
 <div class="row">
   <div class="col-md-1">
     <div class="d-flex flex-column align-items-center text-center p-3 py-5"></div>
   </div>
+
   <div id="main_change" class="col-md-10">
-    <div class="p-3 py-5">
-      <div class="d-flex justify-content-center align-items-center mb-3">
-        <h4 class="text-right">Создать товар</h4>
-      </div>
+    <form method="post" name="product_cards" enctype="multipart/form-data">
+      {% csrf_token %}
 
-      <div class="row mt-2">
-        <div class="col-md-12 justify-content-center">
-          <form method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            <div class="col-md-6">
-                <label class="labels">Название</label>
-                <input type="text" name="product_name" class="form-control" placeholder="Название товара" value="">
-            </div>
-            <label class="labels">Загрузить фото</label>
-            <input id="fileupload" class="form-control"
-                   name="product_photos" type="file" />
-            <div class="row mt-3">
-                <div class="col-md-9">
-                    <label class="labels">Описание товара</label>
-                    <textarea name="product_description" class="form-control"></textarea>
-                </div>
-            </div>
-            <br>
-            <div class="row mt-4">
-                <div class="col-md-4">
-                    <label class="labels">Цена</label>
-                    <div class="input-group mb-4">
-                        <input type="number" name="product_cost" class="form-control" style="text-align: right;" multiple>
-                        <span class="input-group-text">.00 ₽</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="mt-5 text-center">
-                <button name="product_creator" class="btn btn-primary profile-button" type="submit">Создать</button>
-            </div>
-          </form>
+      <div class="p-3 py-5">
+        <div class="d-flex justify-content-center align-items-center mb-3">
+          <h4 class="text-right">Мои товары</h4>
         </div>
-      </div>
 
-
+        {% comment %} ------ {% endcomment %}
+        <div class="row mt-3">
+          <div class="col-md-6">
+            card1
+          </div>
+          <div class="col-md-6">
+            card2
+          </div>
+        </div>
+        {% comment %} ------ {% endcomment %}
       </div>
-    </div>
+    </form>
   </div>
-
-{#</form>#}
+</div>
