Creator only unique for email

--- a/bizopt/BO/templates/becomeCreatorTemplates/template2.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template2.html
@@ -73,6 +73,9 @@
         <div class="mt-5 text-center">
           <button name="profile_saver" class="btn btn-primary profile-button" type="submit">Сохранить</button>
         </div>
+        <div class="mt-2 mb-2">
+            <label class="labels" style="color: crimson">{{ error }}</label>
+        </div>
       </div>
     </form>
   </div>
