--- a/bizopt/BO/templates/becomeCreatorTemplates/template4.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template4.html
@@ -66,7 +66,7 @@
                               <option value="Central African Republic">Central African Republic</option>
                               <option value="Chad">Chad</option>
                               <option value="Chile">Chile</option>
-                              <option value="China">China</option>
+                              <option value="China" selected>China</option>
                               <option value="Christmas Island">Christmas Island</option>
                               <option value="Cocos (Keeling) Islands">Cocos (Keeling) Islands</option>
                               <option value="Colombia">Colombia</option>
@@ -283,14 +283,17 @@
                             <button class="btn btn-outline-secondary" id="btnAdd" onclick="abbInput()" type="button"><i class="fa fa-plus"></i></button>
                             <br>
                         </div>
+
+
+
                         <!-- template start -->
                         <div id="inputDiv">
                         </div>
                         <!-- template end -->
                     </div>
                 </div>
+            </div>
         </form>
-        </div>
     </div>
     <script>
         function abbInput() {
@@ -303,3 +306,4 @@
             element.remove();
         }
     </script>
+</div>
