--- a/bizopt/BO/templates/becomeCreatorTemplates/template2.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template2.html
@@ -40,14 +40,7 @@
 
         <div class="row mt-3">
           <div class="input-group mb-7">
-            <div class="input-group-prepend">
-              <label class="input-group-text" for="inputGroupSelect01">Вид деятельности</label>
-            </div>
-            <select name="profile_activity_type" class="custom-select" id="inputGroupSelect01">
-              <option value="1_Hand-made">Hand-made</option>
-              <option value="2_Hard-luxury" selected>Тяжелый люкс</option>
-              <option value="3_Garden-gifts">Дары огорода</option>
-            </select>
+            {{ form1.select }}
           </div>
         </div>
 
