--- a/bizopt/BO/templates/orders.html
+++ b/bizopt/BO/templates/orders.html
@@ -2,7 +2,102 @@
 {% block content %}
 
 
-<h1>Здесь панель для взаимодействия с товарами, заказами</h1>
+
+   <h1>Выши заказы</h1>
+
+
+<div class="placeOut">
+   
+   
+   
+   
+   
+   
+    <!-- DJANGO for start here -->
+
+    <div class="accordion" id="accordionExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            
+                  <div class="d-flex container-fluid flex-row">
+                    
+                      <img src="https://cdn130.picsart.com/356259745047201.jpg" alt="" width="60" height="48" class="d-inline-block align-text-top">
+                      
+                      <h1 style="margin-left: 5%">Name task</h1>
+                    
+                  </div>
+              
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+
+            <div class="progress">
+             
+              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%">в работе</div>
+              
+            </div>
+            
+            
+            
+            
+            <dl class="row" style="margin-top: 2%">
+              <dt class="col-sm-3">Описание</dt>
+              <dd class="col-sm-9">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, sapiente expedita iusto quidem ipsa placeat commodi adipisci ab omnis voluptatibus ducimus vero delectus repellat quasi, cumque ea! Voluptatibus, recusandae, deserunt! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus facere itaque rem et nobis amet fugit deleniti modi consequatur sapiente, nam eligendi iste saepe pariatur labore quos quasi praesentium earum.</dd>
+
+              <dt class="col-sm-3">Цена</dt>
+              <dd class="col-sm-9">
+                <div class="price">
+                    1000 ₽
+                </div>
+                
+                <span class="badge rounded-pill bg-success">Оплачено</span>
+                
+                <span class="badge rounded-pill bg-danger">Не оплачено</span>
+              </dd>
+
+              <dt class="col-sm-3">Контакты продавца</dt>
+              <dd class="col-sm-9">This definition is short, so no extra paragraphs or anything.</dd>
+
+              
+              
+            </dl>
+            
+
+         
+         
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- DJANGO for end here -->
+
+</div>
+
+
+
+
+
+
+<style>
+
+    .placeOut{
+        width: 60%;
+        height: auto;
+        margin: auto;
+        margin-top: 5%;
+    }
+    
+    .price {
+        font-weight: 500;
+        font-size: 1.5em;
+        line-height: 48px;
+        letter-spacing: 1px;
+    }
+
+</style>
 
 
 {% endblock %}
