add changes becomeCreator.html

--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %} {% block content %}
-
+<!DOCTYPE html>
+<html lang="en">
 
 
 <head>
@@ -84,7 +84,7 @@
                     <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
                         <a class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
                             <span class="fs-5 d-none d-sm-inline" style="font-size: large;">
-                                Меню
+                                BIZOPT Partners
                             </span>
                         </a>
                         <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start hover-text-light sticky-top" id="menu">
@@ -145,4 +145,3 @@
 
     </script>
 </body>
-{% endblock %}
